ADding Copyright Notice

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+Copy Right Notice
+-->
+
 <head>
 	<title>An Exmple Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
