making changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copy Right Notice
 -->
 
 <head>
-	<title>An Exmple Website</title>
+	<title>An great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -22,7 +22,7 @@ Copy Right Notice
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; A.S.K 2020</p>
 	</footer>
 </body>
 </html>
