adding conflictin changes

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copy Right Notice
 -->
 
 <head>
-	<title>An Exmple Website</title>
+	<title>An Very Master Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@ Copy Right Notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I m not sure
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; A.S.K 2019</p>
 	</footer>
 </body>
 </html>
